# RepoGrammar

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json
.agents/memories/: README.md  codegraph-provider-plan.md  known-constraints.md  open-questions.md  project-state.md  python-dogfooding-plan.md  python-v0.1-algorithm-plan.md  unknown-governance.md  v0.1-parallel-development-plan.md  v0.1-substrate-hardening-checkpoint.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  framework_support.yml  install_problem.yml
.github/workflows/: ci.yml  npm-tag-reconcile.yml  release.yml  stable-release-finalize.yml
algorithms/paper/: README.md
docs/: README.md  limitations.md  quickstart-claude.md  quickstart-codex.md  quickstart.md  roadmap.md
docs/architecture/: dependency-rules.md  module-map.md  overview.md
docs/case-studies/: public-preview-dogfood.md  public-preview-dogfood.summary.json
docs/decisions/: ADR-0001-rust-core.md  ADR-0002-local-sqlite-index.md  ADR-0003-pattern-family-model.md  ADR-0004-rust-core-language-native-workers.md  ADR-0005-ts-js-first-mvp.md  ADR-0006-pattern-family-cli.md  ADR-0007-safe-install-progress-telemetry.md  ADR-0008-repo-local-state-boundary.md  ADR-0009-experimental-python-dogfooding.md  ADR-0010-optional-codegraph-provider.md  ADR-0011-python-first-v0-1.md  ADR-0012-python-selective-analysis-cascade.md  ADR-0013-agent-adoption-read-displacement.md  ADR-0014-unified-install-layout.md  ADR-0015-provider-backed-semantic-analysis-execution.md  ADR-0016-semantic-obligation-refinement.md  ADR-0017-optional-provider-capability-registry.md  ADR-0018-query-discovery-hydration-routing.md  ADR-0019-bounded-multi-language-structural-expansion.md  ADR-0020-top-20-language-expansion-gate.md  ADR-0021-go-standard-library-semantic-worker-preflight.md  ADR-0022-ruby-prism-minitest-preflight.md  ADR-0023-handle-relative-filesystem-confinement-preflight.md  ADR-0024-php-sandboxed-frontend-phpunit-preflight.md  ADR-0025-swift-syntax-sourcekit-xctest-preflight.md  ADR-0026-zero-friction-onboarding-orchestration.md  ADR-0027-init-default-repository-autosync.md  ADR-0028-receipted-product-self-uninstall.md  ADR-0029-additive-resolution-cardinality.md  ADR-0030-default-auto-wired-agent-instructions.md  README.md
docs/demo/: build-week-demo.md  verified-cli-transcript.md
docs/development/: agent-workflow.md  branching-and-commits.md  documentation-policy.md  repository-guard.md  testing.md
docs/examples/: python-fastapi-pytest.md
src/rust/: lib.rs
(+556 files in other folders)
